syntax = "proto3";

package knoway.clusters.v1alpha1;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option go_package = "knoway.dev/api/clusters/v1alpha1";

message ClusterFilter {
    string name                = 1;
    google.protobuf.Any config = 2;
}

enum LoadBalancePolicy {
    LOAD_BALANCE_POLICY_UNSPECIFIED = 0;
    ROUND_ROBIN                     = 1;
    LEAST_CONNECTION                = 2;
    IP_HASH                         = 3;

    // CUSTOM means the load balance policy is defined by the filters.
    CUSTOM = 15;
}

message TLSConfig {
    // todo
}

message Upstream {
    string url = 1;
    message Header {
        string key   = 1;
        string value = 2;
    }
    repeated Header headers                           = 3;
    int32 timeout                                     = 4;
    map<string, google.protobuf.Value> defaultParams  = 5;
    map<string, google.protobuf.Value> overrideParams = 6;
    repeated string removeParamKeys                   = 7;
}

enum ClusterType {
    CLUSTER_TYPE_UNSPECIFIED = 0;
    LLM                      = 1;
    IMAGE_GENERATION         = 2;
}

enum ClusterProvider {
    CLUSTER_PROVIDER_UNSPECIFIED = 0;
    OPEN_AI                      = 1;
    VLLM                         = 2;
    OLLAMA                       = 3;
}

message ClusterMeteringPolicy {
    enum SizeFrom {
        SIZE_FROM_UNSPECIFIED = 0;
        // For image generation, the size of the generated image is determined
        // by the input parameters.
        //
        // For example, even if the output image is 1024x1024, as long as the
        // input parameter specified 256x256, the size of the generated image
        // will be account as 256x256.
        SIZE_FROM_INPUT = 1;
        // For image generation, the size of the generated image is determined
        // by the output image. This is done by parsing through the actual
        // generated image file header by using Golang's std library to
        // determine the size of the image.
        //
        // For example, no matter what the input specified, if the output image
        // is 1024x1024, the size of the generated image will be account as
        // 1024x1024.
        SIZE_FROM_OUTPUT = 2;
        // For image generation, the size of the generated image is determined
        // by the greatest size of the input parameters and output image
        // resolution.
        //
        // For example, if the input parameter specified 256x256 and the output
        // image is 1024x1024, the size of the generated image will be account
        // as 1024x1024. On the other hand, if the input parameter specified
        // 1024x1024 and the output image is 256x256, the size of the generated
        // image will be account as 1024x1024.
        SIZE_FROM_GREATEST = 3;
    }

    optional SizeFrom sizeFrom = 1;
}

message Cluster {
    string name                          = 1;
    LoadBalancePolicy loadBalancePolicy  = 2;
    Upstream upstream                    = 3;
    TLSConfig tlsConfig                  = 4;
    repeated ClusterFilter filters       = 5;
    ClusterProvider provider             = 6;
    int64 created                        = 7;
    ClusterType type                     = 8;
    ClusterMeteringPolicy meteringPolicy = 9;
}
